kubernetes/apps/services/obsidian/components/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: obsidian
  namespace: personal
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    link.argocd.argoproj.io/external-link: "https://obsidian.ruth.aritrosinha.dpdns.org/"
spec:
  rules:
    - host: obsidian.ruth.aritrosinha.dpdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: obsidian
                port:
                  name: http
  tls:
    - hosts:
        - obsidian.ruth.aritrosinha.dpdns.org
      secretName: obsidian-tls
